# sky_day_27

./: pyproject.toml
day_27/: main.py
